fdo#55853 - improve parsing of concatenated numbers and identifiers.

Change-Id: Ic1cce4cec27f4ca5c3be1daf50888bef788cd6f7
Reviewed-on: https://gerrit.libreoffice.org/4494
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>